프로젝트 업데이트
.

--- a/MobileUIUXProject/Packages/manifest.json
+++ b/MobileUIUXProject/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.gindemit.rlottie": "https://github.com/gindemit/unity-rlottie.git?path=/unity/RLottieUnity/Assets/LottiePlugin/#0.2.2",
+    "com.kyrylokuzyk.primetween": "file:../Assets/Plugins/PrimeTween/internal/com.kyrylokuzyk.primetween.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
